fix main content(align center)

--- a/style/style.css
+++ b/style/style.css
@@ -66,13 +66,13 @@ ul li {
 
 .main-container{
   margin-top: 70px;
-  margin-left:177px;
 }
 .item-container{
     max-width: 1599px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin: auto;
 }
 
 .item{
